Bug 1222201: Only use container calculated dimensions. r=cpearce a=ritu

--HG--
extra : commitid : 1RdwXemQVrE
extra : source : 87b9a8debdadef09a477d2e77ed026029032d15c